# hos

./: Procfile  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/routes/: newneiro.py  newneiro_voice.py  smart_cam.py  smart_translator.py
app/templates/: index.html  newneiro_voice.html  smart_cam.html  smart_translator.html
